cet_make(NO_DICTIONARY) ### MIGRATE-ACTION-RECOMMENDED (migrate-3.05.03) - deprecated: use cet_make_library(), build_dictonary(), cet_plugin() with explicit source lists and plugin base types

art_dictionary(DICTIONARY_LIBRARIES larcoreobj_SummaryData)

add_subdirectory(SampledDicts)

install_headers()
install_source()
